feat: implements REST endpoints and migrate core business logic in MatchService